--- a/XdfStreamer/xdfstreamer.ui
+++ b/XdfStreamer/xdfstreamer.ui
@@ -138,8 +138,51 @@
        <string>Synthetic Signal Parameters</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="7">
-        <widget class="QLineEdit" name="lineEdit_3"/>
+       <item row="0" column="8">
+        <spacer name="horizontalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="6">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Stream Type</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QLineEdit" name="lineEdit_2"/>
+       </item>
+       <item row="0" column="5">
+        <spacer name="horizontalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="spinBox_2"/>
+       </item>
+       <item row="0" column="9">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Channel Format</string>
+         </property>
+        </widget>
        </item>
        <item row="0" column="2">
         <spacer name="horizontalSpacer_5">
@@ -161,6 +204,9 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="7">
+        <widget class="QLineEdit" name="lineEdit_3"/>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
@@ -168,44 +214,44 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="8">
-        <spacer name="horizontalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="0" column="6">
-        <widget class="QLabel" name="label_5">
-         <property name="text">
-          <string>Stream Type</string>
-         </property>
+       <item row="0" column="10">
+        <widget class="QComboBox" name="comboBox">
+         <item>
+          <property name="text">
+           <string>cf_float32</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cf_double64</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cf_string</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cf_int32</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cf_int16</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cf_int8</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cf_int64</string>
+          </property>
+         </item>
         </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QSpinBox" name="spinBox_2"/>
-       </item>
-       <item row="0" column="4">
-        <widget class="QLineEdit" name="lineEdit_2"/>
-       </item>
-       <item row="0" column="5">
-        <spacer name="horizontalSpacer_6">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
