--- a/XdfStreamer/xdfstreamer.ui
+++ b/XdfStreamer/xdfstreamer.ui
@@ -215,7 +215,7 @@
         </widget>
        </item>
        <item row="0" column="10">
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="formatComboBox">
          <item>
           <property name="text">
            <string>cf_float32</string>
